--- a/themes/hugo-ink/layouts/partials/header.html
+++ b/themes/hugo-ink/layouts/partials/header.html
@@ -12,7 +12,7 @@
 	{{- if isset .Site.Params "favicon" -}}
 		<link rel="icon" type="image/png" href={{ .Site.Params.favicon }} />
 	{{- end -}}
-
+	<meta name="description" content="YLA's random stuff">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	{{ with .OutputFormats.Get "rss" -}}
 		{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
