--- a/public/css/main.css
+++ b/public/css/main.css
@@ -378,7 +378,7 @@ ul {
     text-align: right;
     font-size: 0.75em;
     color: #999;
-    border-top: 1px solid #f4f4f4;
+    border-top: 1px solid #1f1b1b;
     margin-top: 40px;
     padding: 15px 0;
 }
