--- a/themes/hugo-ink/layouts/index.html
+++ b/themes/hugo-ink/layouts/index.html
@@ -19,9 +19,9 @@
 								</div>
 							</div>
 							<div class="matter">
-								<h4 class="title small">
+								<div class="title small">
 									<a href="{{ .RelPermalink }}">{{.Title}}{{ if .Draft }}<sup class="draft-label">DRAFT</sup>{{ end }}</a>
-								</h4>
+								</div>
 								<span class="description">
 									{{ if isset .Params "description" }}
 										{{ .Description }}
