--- a/themes/hugo-ink/static/css/main.css
+++ b/themes/hugo-ink/static/css/main.css
@@ -343,6 +343,8 @@ ul {
 
 .post .title.small {
     margin: 0 0 10px 0;
+    font-size: 1.5em;
+    font-weight: 500;
 }
 .post .post-header {
     margin-bottom: 30px;
@@ -377,7 +379,7 @@ ul {
 .footer {
     text-align: right;
     font-size: 0.75em;
-    color: #999;
+    color: rgb(39, 39, 39);
     border-top: 1px solid #f4f4f4;
     margin-top: 40px;
     padding: 15px 0;
