--- a/themes/hugo-ink/layouts/partials/head.html
+++ b/themes/hugo-ink/layouts/partials/head.html
@@ -2,7 +2,7 @@
 	{{ if .Site.Params.Avatar }}
 		<div class="avatar">
 			<a href="{{ .Site.BaseURL }}">
-				<img src="{{ .Site.Params.Avatar }}" alt="{{ .Site.Title }}" />
+				<img src="{{ .Site.Params.Avatar | safeURL }}" alt="{{ .Site.Title }}" />
 			</a>
 		</div>
 	{{ end }}
@@ -16,11 +16,11 @@
 				{{- range $index, $key := .Site.Params.Social -}}
 					<li><a href="{{ $key.url }}" title="{{ $key.name }}"><i data-feather="{{ $key.icon }}"></i></a></li>
 				{{- end -}}
+		    {{- if or (eq .Site.Params.mode "auto") (eq .Site.Params.mode "dark") -}}
+		    	<li><a href="#" class="scheme-toggle" id="scheme-toggle"></a></li>
+		    {{- end -}}
 			</ul>
 		</nav>
-                {{- if or (eq .Site.Params.mode "auto") (eq .Site.Params.mode "dark") -}}
-                <span class="scheme-toggle"><a href="#" id="scheme-toggle"></a>
-                {{- end -}}
 	</div>
 
 	<nav class="nav">
