--- a/themes/hugo-ink/static/css/main.css
+++ b/themes/hugo-ink/static/css/main.css
@@ -6,6 +6,7 @@ body {
     color: #333;
     line-height: 1.8em;
     font-size: 17px;
+    font-display: swap;
 }
 
 a {
@@ -104,6 +105,7 @@ blockquote {
     font-style: italic;
     font-size: 1.4rem;
     font-family: Georgia,bitstream charter,serif;
+    font-display: swap;
     border-left: 3px solid;
     border-color: #3700ff;
     padding-left: 20px;
@@ -335,6 +337,7 @@ ul {
     font-weight: 700;
     line-height: 0.45em;
     font-size: 3em;
+    font-display: swap;
     display: block;
     margin-bottom: 20px;
 }
