--- a/themes/hugo-ink/layouts/partials/footer.html
+++ b/themes/hugo-ink/layouts/partials/footer.html
@@ -8,3 +8,10 @@
 {{- with .Site.Params.Social -}}
 {{- end -}}
 <script async defer data-website-id="bbf98e47-b734-424e-a492-7a54c6b4abd3" src="https://umami.yelinaung.com/umami.js"></script>
+
+<script async defer
+        data-website-id="bbf98e47-b734-424e-a492-7a54c6b4abd3"
+        src="https://umami.yelinaung.com/umami.js"
+        data-domains="yelinaung.com,blog.yelinaung.com"
+        >
+</script>
