--- a/themes/terminal/layouts/partials/footer.html
+++ b/themes/terminal/layouts/partials/footer.html
@@ -21,4 +21,9 @@
 
 <!-- Extended footer section-->
 {{ partial "extended_footer.html" . }}
-<script async defer data-website-id="bbf98e47-b734-424e-a492-7a54c6b4abd3" src="https://umami.yelinaung.com/umami.js"></script>
+<script async defer
+        data-website-id="bbf98e47-b734-424e-a492-7a54c6b4abd3"
+        src="https://umami.yelinaung.com/umami.js"
+        data-domains="yelinaung.com,blog.yelinaung.com"
+        >
+</script>
