--- a/themes/hugo-ink/layouts/partials/footer.html
+++ b/themes/hugo-ink/layouts/partials/footer.html
@@ -12,7 +12,7 @@
 
 <script async defer
         data-website-id="bbf98e47-b734-424e-a492-7a54c6b4abd3"
-        src="https://umami.yelinaung.com/umami.js"
+        src="https://umami.yelinaung.com/script.js"
         data-domains="yelinaung.com,blog.yelinaung.com"
         >
 </script>
