--- a/themes/hugo-ink/layouts/_default/single.html
+++ b/themes/hugo-ink/layouts/_default/single.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 {{ partial "header.html" . }}
 <body>
 	<div class="container wrapper">
@@ -19,7 +19,7 @@
 					<h1 class="title">{{ .Title }}</h1>
 				</div>
 			</div>
-					
+
 			<div class="markdown">
 				{{ .Content }}
 			</div>
