--- a/themes/hugo-ink/layouts/index.html
+++ b/themes/hugo-ink/layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html {{- if (eq .Site.Params.mode "dark") -}}class="dark"{{ end }} lang="en">
+<html lang="{{ .Page.Language.Params.languageCodeHTML | default "en" }}" {{- if (eq .Site.Params.mode "dark") -}}class="dark"{{ end }}>
 {{ partial "header.html" . }}
 <body>
 	<div class="container wrapper">
