--- a/themes/hugo-ink/layouts/partials/header.html
+++ b/themes/hugo-ink/layouts/partials/header.html
@@ -18,6 +18,9 @@
 		{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 	{{ end -}}
 
+	<meta name="description" content="{{ site.Params.description }}" />
+	<meta name="author" content="{{ site.Params.author }}" />
+
 	{{- template "_internal/schema.html" . -}}
 	{{- template "_internal/opengraph.html" . -}}
 	{{- template "_internal/twitter_cards.html" . -}}
