--- a/themes/hugo-ink/layouts/partials/footer.html
+++ b/themes/hugo-ink/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="footer wrapper">
 	<nav class="nav">
-        <a rel="me" href="https://club.saryay.club/@yelinaung">Find me on Mastodon</a>
-		<div>{{ .Date.Year}} {{ with .Site.Copyright }} {{ . | safeHTML }} | {{ end }} <a href="https://github.com/knadh/hugo-ink">Ink</a> theme on <a href="https://gohugo.io">Hugo</a></div>
+        <a rel="me" title="Link to Mastodon" href="https://hachyderm.io/@yelinaung">Find me on Mastodon</a>
+	        <div>{{ .Date.Year}} {{ with .Site.Copyright }} {{ . | safeHTML }} | {{ end }} <a title="Hugo Theme Link" href="https://github.com/knadh/hugo-ink">Ink</a> theme on <a title="Hugo site" href="https://gohugo.io">Hugo</a></div>
 	</nav>
 </div>
 
