--- a/themes/hugo-ink/layouts/_default/single.html
+++ b/themes/hugo-ink/layouts/_default/single.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 {{ partial "header.html" . }}
 <body>
 	<div class="container wrapper">
@@ -36,7 +36,7 @@
 				{{ end }}
 			</div>
 
-			{{- if .Site.DisqusShortname -}}
+			{{- if .Site.Config.Services.Disqus.Shortname -}}
 			{{- $.Scratch.Set "isDisqus" true -}}
 
 			{{- if and (isset .Params "type") (in .Site.Params.disableDisqusTypes .Params.type) -}}
