--- a/themes/hugo-ink/layouts/_default/term.html
+++ b/themes/hugo-ink/layouts/_default/term.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 {{ partial "header.html" . }}
 
 <body>
 	<div class="container wrapper tags">
 		{{ partial "head.html" . }}
 
-		<h1 class="page-title">All tags</h1>
+		<h1 class="page-title">{{ .Title }}</h1>
+
+		{{ with (.Site.GetPage .Title) }}
+		<ul>
+			{{ range .Pages }}
+				<li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+			{{ end }}
+		</ul>
+		{{ end }}
 	</div>
 
 	{{ partial "footer.html" . }}
