--- a/themes/hugo-ink/layouts/index.html
+++ b/themes/hugo-ink/layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Page.Language.Params.languageCodeHTML | default "en" }}" {{- if (eq .Site.Params.mode "dark") -}}class="dark"{{ end }}>
+<html {{- if (eq .Site.Params.mode "dark") -}}class="dark"{{ end }}>
 {{ partial "header.html" . }}
 <body>
 	<div class="container wrapper">
@@ -11,28 +11,7 @@
 				{{ $paginator := .Paginate (where $pages "Params.hidden" "ne" true) }}
 				{{ range $paginator.Pages }}
 					<div class="post">
-						<div class="post-header">
-							<div class="meta">
-								<div class="date">
-									<span class="day">{{ dateFormat "02" .Date }}</span>
-							<span class="rest">{{ if $.Site.Data.month }}{{ index $.Site.Data.month (printf "%d" .Date.Month) }} {{ .Date.Year }}{{ else }}{{ dateFormat "Jan 2006" .Date }}{{ end }}</span>
-								</div>
-							</div>
-							<div class="matter">
-								<div class="title small">
-									<a href="{{ .RelPermalink }}">{{.Title}}{{ if .Draft }}<sup class="draft-label">DRAFT</sup>{{ end }}</a>
-								</div>
-								<span class="description">
-									{{ if isset .Params "description" }}
-										{{ .Description }}
-									{{ else if gt (len .RawContent) 120 }}
-										{{ slicestr .RawContent 0 120 }}...
-									{{ else }}
-										{{ .RawContent }}
-									{{ end }}
-								</span>
-							</div>
-						</div>
+						{{ partial "post-preview.html" . }}
 					</div>
 				{{ end }}
 				{{ template "partials/paginator.html" . }}
