Update header.html to add Umami script

--- a/themes/hugo-ink/layouts/partials/header.html
+++ b/themes/hugo-ink/layouts/partials/header.html
@@ -41,4 +41,5 @@
 	{{- if isset .Site.Params "customjs" -}}
 		{{- range .Site.Params.customJS }}<script src="{{ $.Site.BaseURL }}{{ . }}"></script>{{- end }}
 	{{- end }}
+	<script defer src="https://umami.yelinaung.com/script.js" data-website-id="bbf98e47-b734-424e-a492-7a54c6b4abd3"></script>
 </head>
